--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -18,7 +18,13 @@ a.active {
     text-decoration: underline;
     text-underline-offset: 20px;
 }
-
+.underline-select {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.login-link {
+    color:rgb(0, 130, 150);
+}
 header {
     margin-top: 1%;
     display: flex;
@@ -108,6 +114,37 @@ header {
     background-color: rgb(5, 222, 255);
 }
 
+#target-box {
+    border: 1px solid black;
+    padding: 3%;
+}
+#copy-link {
+    margin-left: 20px;
+}
+#copy-image {
+    height: 40px;
+}
+#shorted {
+    font-size: 40px;
+}
+
+#information {
+    width: 90%;
+    margin-top: 10%;
+    text-align: left;
+    font-size: 25px;
+}
+#secret-key {
+    background: none;
+
+}
+#visibility {
+    transform: translate(0,6px);
+    -ms-transform: translate(0,6px); 
+    -webkit-transform: translate(0,6px); 
+    -o-transform: translate(0,6px);
+    -moz-transform: translate(0,6px); 
+}
 @media (max-width: 1300px) {
     #right-part-nav {
         width: 60%;
