--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -5,6 +5,13 @@ body {
     font-family: 'Roboto Mono', monospace;
     padding: 0 50px;
 }
+#theme-changer {
+    height: 5%;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: aliceblue;
+}
 a {
     color: black;
     text-decoration: none;
