--- a/interface/css/dark.css
+++ b/interface/css/dark.css
@@ -8,6 +8,7 @@ a {
     color: white;
 }
 
+
 .input {
     border-width: 3px;
     border-color: rgb(0, 135, 133);
@@ -25,4 +26,9 @@ a {
 }
 #secret-with-control {
     background-color: grey;
+}
+.social-icon {
+    background-color: aliceblue;
+    border-radius: 50%;
+    padding: 3%;
 }
