--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -4,6 +4,10 @@
 body {
     font-family: 'Roboto Mono', monospace;
     padding: 0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
 }
 #theme-changer {
     height: 5%;
@@ -39,6 +43,25 @@ header {
     font-size: 20px;
 }
 
+footer {
+    
+    margin-bottom: 1%;
+    text-align: center;
+}
+div#social {
+    width: 30%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+}
+#social>div {
+    margin: 0 3%;
+}
+.social-icon {
+    height: 6vh;
+}
+
+
 #right-part-nav {
     display: flex;
     width: 40%;
@@ -55,9 +78,12 @@ header {
     width: 60%;
     margin: 0 auto;
     text-align: center;
+    height: 80%;
 }
 
 #site-name {
+    margin: 0;
+    margin-bottom: 5%;
     font-size: 70px;
 }
 
@@ -198,7 +224,7 @@ header {
         font-size: 10px;
     }
     .shorten-btn {
-        margin-top: 40%;
+        margin-top: 20%;
         width: 80%;
     }
     #shorted {
