--- a/shortener/templates/shortener/link_created.html
+++ b/shortener/templates/shortener/link_created.html
@@ -1,13 +1,47 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Сокращенная ссылка для {{ link.original }}{% endblock %}
 
-    <h1>Вы создали сокращенную ссылку</h1>
-    <p>Ссылка: <a href={{ url }}>{{ url }}</a></p>
+{% block content %}
+    <div id="created-link">
+        <div id="result">
+            <h1 id="your-link">Ваша ссылка:</h1>
+            <div id="target-box">
+                <div id="shorted">
+                    <span id="target-link">{{ url }}</span>
+                    <span id="copy-link"><img src="{% static "images/copy-btn/copy.svg" %}" alt="Копировать ссылку" id="copy-image"></span>
+                </div>
+            </div>
+            <div id="qr">
+                <a href="" id="download-qr">QR код(PNG)</a>
+            </div>
 
-</body>
-</html>
+        </div>
+
+        <div id="information">
+
+            <h2>Хотите иметь доступ к <span class="underline-select">статистике</span> своей ссылки?</h2>
+            <p><a href="" class="login-link">Зарегистрируйтесь</a> или <a href="" class="login-link">войдите</a> в свой аккаунт, а затем на вкладке "Ваши ссылки"
+                добавьте вашу ссылку с помощью секретного кода: <span id="secret-with-control"><input type="password" name="" class="adapt" id="secret-key" value="{{ link.secret_key }}" size="" disabled ><img src='{% static "images/visibility/unvisible.svg" %}' alt="Скрыть/Показать" id="visibility"></span></p>
+        </div>
+    </div>
+{% endblock %}
+    {% block after_content %}
+        <script src="{% static "js/selection.js" %}"></script>
+        <script src="{% static "js/copy-btn.js" %}"></script>
+        <script>
+            var copy_btn = document.getElementById("copy-image");
+            CopyButton(copy_btn, "{% static "images/copy-btn/copy.svg" %}", "{% static "images/copy-btn/copy-filled.svg" %}", "{% static "images/copy-btn/done.svg" %}");
+        </script>
+        <script src="{% static "js/visibility.js" %}"></script>
+        <script>
+            var adapt_text_elements = document.querySelectorAll(".adapt");
+            for(var el of adapt_text_elements) {
+                el.size = el.value.length;
+            }
+
+            var vis_el = document.getElementById("visibility");
+            var password_el = document.getElementById("secret-key");
+            addPasswordOnOff(password_el, vis_el, "{% static "images/visibility/visible.svg" %}", "{% static "images/visibility/unvisible.svg" %}");
+        </script>
+    {% endblock %}
