Corrected QR Code Download Link

--- a/shortener/templates/shortener/link_created.html
+++ b/shortener/templates/shortener/link_created.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div id="qr">
-                <a href="" id="download-qr">QR код(PNG)</a>
+                <a href="{{ link.qr.url }}" id="download-qr" download>QR код(PNG)</a>
             </div>
 
         </div>
