--- a/shortener/static/css/style.css
+++ b/shortener/static/css/style.css
@@ -97,12 +97,18 @@ div#social {
     margin-top: 6%;
 }
 
-.input {
+input[type="text"]:not(.unactive),
+input[type="password"]:not(.unactive),
+input[type="url"]:not(.unactive),
+input[type="email"]:not(.unactive) {
     border: 2px solid black;
     padding: 10px;
     transition: border-color 0.5s, border-width 0.1s;
 }
-.input:focus {
+input[type="text"]:not(.unactive):focus,
+input[type="password"]:not(.unactive):focus,
+input[type="url"]:not(.unactive):focus,
+input[type="email"]:not(.unactive):focus  {
     border-width: 3px;
     border-color: rgb(5, 222, 255);
     pointer-events: none;
@@ -131,11 +137,17 @@ div#social {
 }
 
 .btn {
-    color: grey;
+    color: black;
+    width: 50%;
     border: 1px solid;
     border-radius: 5px;
-    padding: 1%;
-    transition-duration: .5;
+    padding: 2%;
+    background-color: rgb(155,217,234);
+    transition-duration: .5s;
+}
+
+.btn:hover {
+    background-color: rgb(5, 222, 255);
 }
 
 .shorten-btn {
@@ -190,8 +202,64 @@ div#social {
     -moz-transform: translate(0,6px); 
 }
 
+#registration {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#registration>div {
+    text-align: left;
+    padding: 2%;
+}
+form.auth-form {
+    width: 50%;
+    margin: 0 auto;
+}
+.auth-btn {
+    margin-top: 5%;
+    border: none;
+
+    font-size: 17px;
+    transition-duration: .5s;
+}
+ul.errorlist {
+    padding: 0;
+    margin: 3% 0;
+}
+
+ul.errorlist>li {
+    text-align: left;
+    display: inline;
+    color: #ff3c3c;
+}
+.label {
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.colspan-2 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.registration-with>h2 {
+    font-weight: normal;
+}
+.social-networks-list {
+    display: flex;
+    justify-content: space-around;
+}
+.social-register {
+    width: 50%;
+}
+.social-register>img {
+    height: 50px;
+}
+
+
+
 @media (max-width: 1300px) {
     #right-part-nav {
+        width: 60%;
+    }
+    .auth-btn {
         width: 60%;
     }
 }
@@ -267,10 +335,26 @@ div#social {
     #information>p {
         font-size: 20px;
     }
+    .btn {
+        width: 100%;
+    }
+    form.auth-form {
+        width: 100%;
+        font-size: 15px;
+    }
+    .auth-btn {
+        margin-top: 20%;
+    }
+    .social-register>img {
+        height: 30px;
+    }
 }
 
-@media (max-width: 460px) {
 
+@media (max-width: 460px) {
+    body {
+        height: 110%;
+    }
     .nav-item {
         font-size: 10px;
     }
@@ -293,4 +377,11 @@ div#social {
     #information>p {
         font-size: 14px;
     }
+    form.auth-form {
+        font-size: 10px;
+    }
+    .social-register>img {
+    height: 20px;
+}
+
 }
