--- a/shortener/templates/shortener/link_created.html
+++ b/shortener/templates/shortener/link_created.html
@@ -21,8 +21,8 @@
         <div id="information">
 
             <h2>Хотите иметь доступ к <span class="underline-select">статистике</span> своей ссылки?</h2>
-            <p><a href="" class="login-link">Зарегистрируйтесь</a> или <a href="" class="login-link">войдите</a> в свой аккаунт, а затем на вкладке "Ваши ссылки"
-                добавьте вашу ссылку с помощью секретного кода: <span id="secret-with-control"><input type="password" name="" class="adapt" id="secret-key" value="{{ link.secret_key }}" size="" disabled ><img src='{% static "images/visibility/unvisible.svg" %}' alt="Скрыть/Показать" id="visibility"></span></p>
+            <p><a href="{% url "register" %}?next={{ request.get_full_path }}" class="login-link">Зарегистрируйтесь</a> или <a href="{% url "login" %}?next={{ request.get_full_path }}" class="login-link">войдите</a> в свой аккаунт, а затем на вкладке "Ваши ссылки"
+                добавьте вашу ссылку с помощью секретного кода: <span id="secret-with-control"><input type="password" name="" class="adapt unactive" id="secret-key" value="{{ link.secret_key }}" size="" disabled ><img src='{% static "images/visibility/unvisible.svg" %}' alt="Скрыть/Показать" id="visibility"></span></p>
         </div>
     </div>
 {% endblock %}
